[package]
name = "advent-of-code-2020"
version = "0.1.0"
authors = ["Paavo Huhtala <paavo.huhtala@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.3.9"
num = "0.3.1"
itertools = "0.9.0"
nom = "6.0.1"
